--- a/apps/ethic_share_web/assets/package.json
+++ b/apps/ethic_share_web/assets/package.json
@@ -7,11 +7,13 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "formik": "^2.2.6",
     "jquery": "^3.5.1",
     "popper": "^1.0.1",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "reactstrap": "^8.8.0",
     "reason-react": "^0.9.1",
@@ -21,7 +23,7 @@
     "jquery": "cp ./node_modules/jquery/dist/jquery.min.js ./public/js/jquery.min.js",
     "popper": "cp ./node_modules/popper.js/dist/popper.min.js ./public/js/popper.min.js",
     "bootstrap": "cp ./node_modules/bootstrap/dist/js/bootstrap.min.js ./public/js/bootstrap.min.js",
-    "inst": "npm install && npm run jquery && npm run popper && npm run bootstrap",
+    "postinstall": "npm run jquery && npm run popper && npm run bootstrap",
     "start": "BASE_URL=http://localhost:4000 react-scripts start",
     "build": "bsb -make-world && react-scripts build",
     "test": "react-scripts test",
@@ -48,6 +50,8 @@
     ]
   },
   "devDependencies": {
-    "bs-platform": "^8.4.2"
+    "bs-platform": "^8.4.2",
+    "http-proxy": "^1.18.1",
+    "http-proxy-middleware": "^1.0.6"
   }
 }
