--- a/apps/ethic_share_web/assets/bsconfig.json
+++ b/apps/ethic_share_web/assets/bsconfig.json
@@ -1,4 +1,5 @@
 {
+    "$schema": "https://raw.githubusercontent.com/rescript-lang/rescript-compiler/master/docs/docson/build-schema.json",
     "name": "ethic-share",
     "reason": {
       "react-jsx": 3
@@ -15,8 +16,11 @@
       }
     ],
     "package-specs": {
-      "module": "commonjs",
+      "module": "es6-global",
       "in-source": true
+    },
+    "warnings": {
+      "number": "-45-33"
     },
     "suffix": ".bs.js",
     "refmt": 3
