--- a/apps/ethic_share_web/assets/bsconfig.json
+++ b/apps/ethic_share_web/assets/bsconfig.json
@@ -7,7 +7,8 @@
     "bsc-flags": ["-bs-no-version-header", "-bs-super-errors"],
     "namespace": true,
     "bs-dependencies": [
-      "reason-react"
+      "reason-react",
+      "ethic-share-base"
     ],
     "sources": [
       {
