--- a/apps/ethic_share_web/assets/package.json
+++ b/apps/ethic_share_web/assets/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "ethic-share-base": "^1.0.1",
     "formik": "^2.2.6",
     "jquery": "^3.5.1",
     "popper": "^1.0.1",
